--- a/app/src/main/res/layout/activity_broadcast.xml
+++ b/app/src/main/res/layout/activity_broadcast.xml
@@ -19,7 +19,7 @@
         <TextView
             android:id="@+id/txt_device"
             android:layout_width="match_parent"
-            android:layout_height="90dp"
+            android:layout_height="60dp"
             android:gravity="center"
             android:textSize="20sp"
             android:textColor="#353535"
@@ -62,6 +62,36 @@
                 android:textColor="@drawable/button_text_color"
                 android:textSize="20sp"
                 android:padding="5dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:layout_width="match_parent"
+            android:layout_height="140dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
+            android:orientation="horizontal">
+            <EditText
+                android:id="@+id/etBroadcastContent"
+                android:layout_width="0dp"
+                android:hint="请输入需要广播的内容"
+                android:maxLength="251"
+                android:padding="5dp"
+                android:textSize="16sp"
+                android:gravity="start"
+                android:background="@drawable/button_normal"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
+            <TextView
+                android:id="@+id/tvSendBroadcastContent"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textSize="18sp"
+                android:textColor="#353535"
+                android:layout_marginLeft="5dp"
+                android:gravity="center_vertical"
+                android:text="发送广播"/>
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
